# backend/src/types/booking.type.ts
@@ -1,17 +1,23 @@
-import { BookingStatus, PaymentMethodType, PaymentStatus, Provider, Type } from "@prisma/client";
+import {
+  BookingStatus,
+  PaymentMethodType,
+  PaymentStatus,
+  Provider,
+  Type
+} from "@prisma/client";
 
 export enum PaymentMethodRequest {
   QRIS = "QRIS",
   VA_BNI = "VA_BNI",
   VA_PERMATA = "VA_PERMATA",
   VA_BRI = "VA_BRI",
-  MANUAL = "MANUAL",
+  MANUAL = "MANUAL"
 }
 
 export enum BankCodes {
   BNI = "BNI",
   PERMATA = "PERMATA",
-  BRI = "BRI",
+  BRI = "BRI"
 }
 
 export type CreateBookingRequest = {
@@ -31,65 +37,65 @@ export type PayBookingRequest = {
 };
 
 export type BookingResponse = {
-  id: string,
-  userId: number | null,
-  accountId: number,
-  status: BookingStatus,
-  duration: string,
-  quantity: number,
-  startAt: Date | null,
-  endAt: Date | null,
-  expiredAt: Date | null,
-  mainValuePerUnit: number,
-  othersValuePerUnit: number | null,
-  voucherId: number | null,
-  voucherType: Type | null,
-  voucherAmount: number | null,
-  voucherMaxDiscount: number | null,
-  mainValue: number,
-  othersValue: number | null,
-  discount: number | null,
-  totalValue: number,
-  account?: any,
-}
+  id: string;
+  userId: number | null;
+  accountId: number;
+  status: BookingStatus;
+  duration: string;
+  quantity: number;
+  startAt: Date | null;
+  endAt: Date | null;
+  expiredAt: Date | null;
+  mainValuePerUnit: number;
+  othersValuePerUnit: number | null;
+  voucherId: number | null;
+  voucherType: Type | null;
+  voucherAmount: number | null;
+  voucherMaxDiscount: number | null;
+  mainValue: number;
+  othersValue: number | null;
+  discount: number | null;
+  totalValue: number;
+  account?: any;
+};
 
 export type PaymentResponse = {
-  paymentId: string,
-  bookingId: string,
-  status: PaymentStatus,
-  value: number,
-  currency: string,
-  provider: Provider,
-  providerPaymentId: string | null,
-  paymentMethod: PaymentMethodType | null,
-  qrUrl: string | null,
-  bankCode?: BankCodes | null,
-  bankAccountNo?: string | null,
-  bankAccountName?: string | null,
-  paidAt: Date | null,
-  refundedAt: Date | null,
-  booking?: any,
-}
+  paymentId: string;
+  bookingId: string;
+  status: PaymentStatus;
+  value: number;
+  currency: string;
+  provider: Provider;
+  providerPaymentId: string | null;
+  paymentMethod: PaymentMethodType | null;
+  qrUrl: string | null;
+  bankCode?: BankCodes | null;
+  bankAccountNo?: string | null;
+  bankAccountName?: string | null;
+  paidAt: Date | null;
+  refundedAt: Date | null;
+  booking?: any;
+};
 
 export type BookingPriceValues = {
-  mainValue: number,
-  othersValue: number,
-  discount: number,
-  totalValue: number,
-}
+  mainValue: number;
+  othersValue: number;
+  discount: number;
+  totalValue: number;
+};
 
 export type CallbackNotificationRequest = {
-  providerPaymentId: string,
-  paymentStatus: PaymentStatus,
-  paidAt: Date | null,
-}
+  providerPaymentId: string;
+  paymentStatus: PaymentStatus;
+  paidAt: Date | null;
+};
 
 export type VoucherResponse = {
-  id: number,
-  voucherName: string,
-  isValid: boolean,
-  type: Type,
-  percentage: number | null,
-  nominal: number | null,
-  maxDiscount: number | null,
-}
+  id: number;
+  voucherName: string;
+  isValid: boolean;
+  type: Type;
+  percentage: number | null;
+  nominal: number | null;
+  maxDiscount: number | null;
+};
